@startuml
'https://plantuml.com/class-diagram

StudyBase <|-- StudyPowerFlow
StudyBase <|-- StudyShortCircuit
StudyBase <|-- StudyTemporal

StudyBase "1" *-- "1" ModelBase : contains
ElementDataDFs <|-- ModelBase
BusesDataDF <|-- ModelBase
SummaryModelData <|-- ModelBase
ElementData <|-- ModelBase
SegmentsDF <|-- ModelBase
ModelUtils <|-- ModelBase

Voltages <|-- StaticResults
Currents <|-- StaticResults
Powers <|-- StaticResults

EnergyMeter <|-- TemporalResults
Monitor <|-- TemporalResults
Monitor <|-- ViewTemporalResults

StaticResults <|-- Results
TemporalResults <|-- Results
ShortCircuitResults <|-- Results

StudyPowerFlow "1" *-- "1" StaticResults : contains
StudyPowerFlow "1" *-- "1" StudyPowerFlowSettings : contains
StudyShortCircuit "1" *-- "1" ShortCircuitResults : contains

StudyTemporal "1" *-- "1" TemporalResults : contains
StudyTemporal "1" *-- "1" ViewTemporalResults : contains

VoltageProfile <|-- ViewStaticResults
ViewStaticResults "1" o-- "1" StaticResults : contains
ViewTemporalResults "1" o-- "1" TemporalResults : contains
StudyPowerFlow "1" *-- "1" ViewStaticResults : contains

ViewStaticResults <|-- ViewResults
ViewTemporalResults <|-- ViewResults
ViewResults "1" o-- "1" Results : contains

StudySettings <|-- StudyPowerFlowSettings

CustomPlotStyle "1" *-- "1" VoltageProfile : contains
StaticResults "1" o-- "1" VoltageProfile : contains

class DSSUtils {
    -dss: DSS

    +compile_dss(dss_file: string)
    +solve_snapshot(control_mode: string, max_control_iter: int)
    +dss_command(command: string)
}

class StudyBase {
    +name: string
    +dss: DSS
    +model: ModelBase
}


class StudyPowerFlow {
    +view: ViewStaticResults
    +results: StaticResults
    +settings: StudyPowerFlowSettings
    +run()
}

class StudyTemporal {
    +view: ViewTemporalResults
    +results: TemporalResults
    +settings: StudyTemporalSettings
}

class ModelBase {
    -dss: DSS
}

class ElementDataDFs {
    -dss: DSS
    +lines_df: pd.DataFrame
    +transformers_df: pd.DataFrame
    +meters_df: pd.DataFrame
    +generators_df: pd.DataFrame
    +vsources_df: pd.DataFrame
    +regcontrols_df: pd.DataFrame
    +loads_df: pd.DataFrame

    -create_dataframe(element: DSS.Element)
}

class BusesDataDF {
    -dss: DSS
    +buses_df: pd.DataFrame

    -create_dataframe()
}

class SummaryModelData {
    -dss: DSS
    +summary_df: pd.DataFrame

    -create_dataframe()
    -get_max_min_norm_amps()
}

class ElementData {
    -dss: DSS
    +element_data(element_class: string, element_name: string): pd.DataFrame
    +edit_element(element_class: string, element_name: string, properties: dict)
    +add_element(element_class: string, element_name: string, properties: dict)
    +add_line_in_vsource(add_meter: Bool)
    -add_meter(meter_name: str, element: str, terminal: int)
    -is_element_in_model(element_class: string, element_name: string)
}

class SegmentsDF {
    -dss: DSS
    +segments_df: pd.DataFrame

    -create_dataframe()
}

class ModelUtils {
    -dss: DSS
    +is_element_in_model(element_class: str, element_name: str): Bool
    +disable_elements_type(element_type: str)
}

class StaticResults {
    -dss: DSS
    +losses
    +total_power
    +voltage_violations
}

class Voltages {
    -dss: DSS
    +voltage_ln_nodes: Tuple[pd.DataFrame, pd.DataFrame]

    -create_dataframe()
}

class Currents {
    -dss: DSS
    +currents_elements: Tuple[pd.DataFrame, pd.DataFrame]

    -create_dataframe()
}

class Powers {
    -dss: DSS
    +powers_elements: Tuple[pd.DataFrame, pd.DataFrame]

    -create_dataframe()
}


class VoltageProfile {
    -dss: DSS
    -results: StaticResults
    + voltage_profile_plot_style: CustomPlotStyle
    + voltage_profile_get_bus_mark()
    + voltage_profile()
}

@enduml
